syntax = "proto3";

option csharp_namespace = "Grpc";

service GrpcPlatformService{
	rpc GetAllPlatforms (GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatform{
	int32 platformId = 1;
	string name = 2;
	string publisher = 3;
}

message PlatformResponse{
	repeated GrpcPlatform platforms = 1;
}